# project-test-linux-fs

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.ui
test/: autoinit.cpp  cmd-exec.cpp  fs.c  init.c  k-lib.c  test.h  test.txt
